--- a/.github/workflows/buildapp.yaml
+++ b/.github/workflows/buildapp.yaml
@@ -1,6 +1,6 @@
 name: Build application
 
-on: [push]
+on: [push, release]
 
 jobs:
   build:
@@ -71,5 +71,30 @@ jobs:
     - name: Archive production artifacts
       uses: actions/upload-artifact@v2
       with:
-        name: application
+        name: FontBakery.zip
         path: dist/FontBakery.zip
+
+  release:
+    needs: build
+    if: github.event_name == 'release'
+    steps:
+    - name: Create Release
+      id: create_release
+      uses: actions/create-release@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        tag_name: ${{ github.ref }}
+        release_name: Release ${{ github.ref }}
+        draft: false
+        prerelease: false
+    - name: Upload Release Asset
+      id: upload-release-asset
+      uses: actions/upload-release-asset@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        upload_url: ${{ steps.create_release.outputs.upload_url }}
+        asset_path: dist/FontBakery.zip
+        asset_name: FontBakery.zip
+        asset_content_type: application/zip
