only generate one build on release

--- a/.github/workflows/buildapp.yaml
+++ b/.github/workflows/buildapp.yaml
@@ -1,7 +1,11 @@
 name: Build application
 
-on: [push, release]
-
+on:
+  release:
+    types: [created]
+  push:
+    branches:
+      - master
 jobs:
   build:
 
